<resources>
    <string name="app_name">AgendaTuuduu</string>

    / main activity

    <string name="Btn_Login">Iniciar Sesion</string>
    <string name="Btn_Registro">Registrarse</string>

    / registro

    <string name="CrearCuentaTXT">Crear una cuenta</string>
    <string name="et_Nombre">Nombres</string>
    <string name="et_Correo">Correo</string>
    <string name="et_Password">Contraseña</string>
    <string name="et_ConfirmarPassword">Confirmar Contraseña</string>
    <string name="et_RegistrarUsuario">Registrar</string>
    <string name="TengoCuentaTXT">Tengo una cuenta</string>


    // login

    <string name="IniciarSesionTXT">Iniciar Sesion</string>
    <string name="CorreoLogin">Correo</string>
    <string name="PassLogin">Contraseña</string>
    <string name="Btn_Logeo">Ingresar</string>
    <string name="UsuarioNuevoTXT">¿No tienes cuenta? Crea una</string>

    // menu

    <string name="BienvenidoPrincipal">Bienvenido(a)</string>
    <string name="UidPrincipal"> -- </string>
    <string name="NombresPrincipal"> -- </string>
    <string name="CorreoPrincipal"> -- </string>

    <string name="Uid_Usuario">Uid del Usuario</string>
    <string name="Correo_Usuario">Correo Usuario</string>
    <string name="Fecha_hora_actual">Fecha y hora actual</string>
    <string name="Titulo">Titulo</string>
    <string name="Descripcion">Descripcion</string>
    <string name="Btn_Calendario">CALENDARIO</string>
    <string name="Fecha">00/00/0000</string>
    <string name="Estado"> No finalizado</string>


    <string name="AgregarNotas">Agregar</string>
    <string name="ListarNotas">Mis Notas</string>
    <string name="Archivados">Archivados</string>
    <string name="Perfil">Perfil</string>
    <string name="AcercaDe">Acerca De</string>
    <string name="CerrarSesion">Salir</string>

    <string name="Agregar_Nota_BD">Agregar</string>

    <string name="Id_nota_Item">Id nota</string>
    <string name="Uid_Usuario_Item">Uid del usuario</string>
    <string name="Correo_usuario_Item">Correo de usuario</string>
    <string name="Fecha_hora_registro_Item">Fecha y hora registro</string>
    <string name="Titulo_Item">Titulo</string>
    <string name="Descripcion_Item">Descripcion</string>
    <string name="Fecha_Item">00/00/000</string>
    <string name="Estado_Item">No finalizado</string>

    <string name="ElijaOpcionTXT">Escoga una opcion</string>
    <string name="CD_Eliminar">Eliminar</string>
    <string name="CD_Actualizar">Actualizar</string>

    <string name="Id_nota_A">Id nota</string>
    <string name="Uid_Usuario_A">Uid del Usuario</string>
    <string name="Correo_Usuario_A">Correo Usuario</string>
    <string name="Fecha_registro_A">Fecha de registro</string>
    <string name="Titulo_A">Titulo</string>
    <string name="Descripcion_A">Descripcion</string>
    <string name="Btn_Calendario_A">CALENDARIO</string>
    <string name="Fecha_A">00/00/0000</string>
    <string name="Estado_A"> No finalizado</string>

</resources>