<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Background"
    tools:context=".AgregarNota.Agregar_Nota">
    
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/Uid_Usuario"
            android:text="@string/Uid_Usuario"
            android:textSize="18sp"
            android:fontFamily="@font/poppinsregular"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:textColor="@color/black"
            android:id="@+id/Correo_Usuario"
            android:hint="@string/Correo_Usuario"
            android:textSize="18sp"
            android:fontFamily="@font/poppinsregular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/Fecha_hora_actual"
            android:text="@string/Fecha_hora_actual"
            android:textSize="18sp"
            android:fontFamily="@font/poppinsregular"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        
        <EditText
            android:id="@+id/Titulo"
            android:hint="@string/Titulo"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:fontFamily="@font/poppinsregular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/Descripcion"
            android:hint="@string/Descripcion"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:minHeight="150dp"
            android:gravity="start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/Btn_Calendario"
                android:text="@string/Btn_Calendario"
                app:icon="@drawable/icono_calendario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"/>
            
            <TextView
                android:id="@+id/Fecha"
                android:hint="@string/Fecha"
                android:textSize="20sp"
                android:layout_marginStart="15dp"
                android:fontFamily="@font/poppinsregular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


        </androidx.appcompat.widget.LinearLayoutCompat>

        <TextView
            android:id="@+id/Estado"
            android:text="@string/Estado"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>