<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Background"
    tools:context=".Registro">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical">
        
        <TextView
            android:textColor="@color/black"
            android:text="@string/CrearCuentaTXT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppinsregular"
            android:textSize="25sp"
            android:gravity="center"/>

        <com.airbnb.lottie.LottieAnimationView
        android:layout_width="300dp"
        android:layout_height="200dp"
        app:lottie_autoPlay="true"
        app:lottie_fileName="adduser.json"
        app:lottie_imageAssetsFolder="assets"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        app:lottie_loop="true"></com.airbnb.lottie.LottieAnimationView>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:textColor="@color/black"
            android:id="@+id/et_Nombre"
            android:hint="@string/et_Nombre"
            android:inputType="textPersonName|textCapWords"
            android:padding="20dp"
            android:drawableStart="@drawable/icono_nombres"
            android:drawablePadding="10dp"
            android:fontFamily="@font/poppinsregular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp">


            <EditText
                android:textColor="@color/black"
                android:id="@+id/et_Correo"
                android:hint="@string/et_Correo"
                android:inputType="textEmailAddress"
                android:padding="20dp"
                android:drawableStart="@drawable/icono_correo"
                android:drawablePadding="10dp"
                android:fontFamily="@font/poppinsregular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            app:passwordToggleEnabled="true"
            app:hintEnabled="false"
            >



            <EditText
                android:id="@+id/et_Password"
                android:hint="@string/et_Password"
                android:inputType="textPassword"
                android:padding="20dp"
                android:drawableStart="@drawable/icono_password"
                android:drawablePadding="10dp"
                android:fontFamily="@font/poppinsregular"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>
        
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            app:passwordToggleEnabled="true"
            app:hintEnabled="false">

            <EditText
                android:id="@+id/et_ConfirmarPassword"
                android:hint="@string/et_ConfirmarPassword"
                android:inputType="textPassword"
                android:padding="20dp"
                android:drawableStart="@drawable/icono_password"
                android:drawablePadding="10dp"
                android:textColor="@color/black"
                android:fontFamily="@font/poppinsregular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/et_RegistrarUsuario"
            android:text="@string/et_RegistrarUsuario"
            android:fontFamily="@font/poppinsregular"
            android:paddingTop="10dp"
            android:layout_marginTop="10dp"
            android:textSize="18dp"
            android:background="@color/colorPrimary"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
             />

        <TextView
            android:id="@+id/TengoCuentaTXT"
            android:text="@string/TengoCuentaTXT"
            android:fontFamily="@font/poppinsregular"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:paddingTop="15dp"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>




        
    </androidx.appcompat.widget.LinearLayoutCompat>


</ScrollView>