<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuPrincipal"
    android:background="@color/Background">
    
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp"
        android:gravity="center">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="135dp"
            app:cardBackgroundColor="@color/colorPrimary"
            app:cardUseCompatPadding="true"
            android:padding="0.2dp"
            app:cardCornerRadius="5dp">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:orientation="vertical">

                <TextView
                    android:text="@string/BienvenidoPrincipal"
                    android:fontFamily="@font/poppinsregular"
                    android:textColor="@color/black"
                    android:textSize="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                
                <ProgressBar
                    android:id="@+id/progressBarDatos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="center"/>



                <TextView
                    android:id="@+id/UidPrincipal"
                    android:text="@string/UidPrincipal"
                    android:textColor="@color/black"
                    android:visibility="gone"
                    android:fontFamily="@font/poppinsregular"
                    android:textSize="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                
                <TextView
                    android:id="@+id/NombresPrincipal"
                    android:text="@string/NombresPrincipal"
                    android:textColor="@color/black"
                    android:visibility="gone"
                    android:fontFamily="@font/poppinsregular"
                    android:textSize="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>


                <TextView
                    android:id="@+id/CorrePrincipal"
                    android:text="@string/CorreoPrincipal"
                    android:textColor="@color/black"
                    android:visibility="gone"
                    android:fontFamily="@font/poppinsregular"
                    android:textSize="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>


            </androidx.appcompat.widget.LinearLayoutCompat>


        </androidx.cardview.widget.CardView>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Fila 1-->
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:weightSum="2">

                <!--Agregar-->
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:orientation="vertical"
                    android:gravity="center">
                    
                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:src="@drawable/agregar"/>

                    <Button
                        android:id="@+id/AgregarNotas"
                        android:enabled="false"
                        android:text="@string/AgregarNotas"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppinsregular"
                        android:textColor="@color/black"
                        android:background="@color/colorPrimary"
                        />

                </androidx.appcompat.widget.LinearLayoutCompat>


                <!--Notas-->
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:orientation="vertical"
                    android:gravity="center">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:src="@drawable/lista"/>

                    <Button
                        android:id="@+id/ListarNotas"
                        android:enabled="false"
                        android:text="@string/ListarNotas"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppinsregular"
                        android:textColor="@color/black"
                        android:background="@color/colorPrimary"
                        />

                </androidx.appcompat.widget.LinearLayoutCompat>







            </androidx.appcompat.widget.LinearLayoutCompat>

            <!-- Fila 2-->

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:weightSum="2">

                <!--Archivados-->
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:orientation="vertical"
                    android:gravity="center">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:src="@drawable/archivados"/>

                    <Button
                        android:id="@+id/Archivados"
                        android:enabled="false"
                        android:text="@string/Archivados"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppinsregular"
                        android:textColor="@color/black"
                        android:background="@color/colorPrimary"
                        />

                </androidx.appcompat.widget.LinearLayoutCompat>


                <!--Perfil-->
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_margin="5dp"
                    android:gravity="center">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:src="@drawable/perfil"/>

                    <Button
                        android:id="@+id/Perfil"
                        android:enabled="false"
                        android:text="@string/Perfil"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppinsregular"
                        android:textColor="@color/black"
                        android:background="@color/colorPrimary"
                        />

                </androidx.appcompat.widget.LinearLayoutCompat>









            </androidx.appcompat.widget.LinearLayoutCompat>

            <!-- Fila 3-->

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:weightSum="2">

                <!--Acerca de-->
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:orientation="vertical"
                    android:gravity="center">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:src="@drawable/acerca_de"/>

                    <Button
                        android:id="@+id/AcercaDe"
                        android:enabled="false"
                        android:text="@string/AcercaDe"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppinsregular"
                        android:textColor="@color/black"
                        android:background="@color/colorPrimary"
                        />

                </androidx.appcompat.widget.LinearLayoutCompat>


                <!--Salir-->
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:orientation="vertical"
                    android:gravity="center">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:src="@drawable/salir"/>

                    <Button
                        android:id="@+id/CerrarSesion"
                        android:enabled="false"
                        android:text="@string/CerrarSesion"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppinsregular"
                        android:textColor="@color/black"
                        android:background="@color/colorPrimary"
                        />

                </androidx.appcompat.widget.LinearLayoutCompat>




            </androidx.appcompat.widget.LinearLayoutCompat>


        </androidx.appcompat.widget.LinearLayoutCompat>





    </androidx.appcompat.widget.LinearLayoutCompat>



</ScrollView>